AI-512 : removed margins for .modal-dialog (avoid white space around modal dialog)

--- a/server/src/main/java/org/activityinfo/ui/client/style/bootstrap/modals.less
+++ b/server/src/main/java/org/activityinfo/ui/client/style/bootstrap/modals.less
@@ -38,7 +38,7 @@
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: 10px;
+//  margin: 10px;
   z-index: (@zindex-modal-background + 10);
 }
 
@@ -127,7 +127,7 @@
 
   .modal-dialog {
     width: 600px;
-    margin: 30px auto;
+//    margin: 30px auto;
   }
 
   .modal-content {
